2004-08-31 JoEllen Drazan <skins@pownuke.com> 1.4.5-cvs-b144

	* New: Added class vapoll to voting output (allows more control over the text)

	* Fix: Calculate minimum width for $divCellWidth if voting "rank" is selected

2004-08-31  Jens A. Tkotz <jens@peino.de>  1.4.5-cvs-b143

	* Change: remove array_search substituin from util.php as we require the use of PHP >= 4.1.0

	* Fix: remove Warning in tools/despam-comments.php

	* Change: Layout adjustment in tools/despam-comments.php

	* Fix: Made 'description' translateable.
	  (Note we need a better way translate fieldnames in editField()

2004-08-30  Jens A. Tkotz <jens@peino.de>  1.4.5-cvs-b142

	* Change: Content of popup for uploading photos is not hardcode centered.

	* Change: No Alttext "No Caption", when Picture has no caption. RFE #962176.

	* Change: HTML Output beautify for add_photos form.

	* Change: Update Jenskin.

2004-08-29  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b141

	* Fix: Shorttags in watermark_album 

2004-08-29  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b140

	* Fix: Shorttag at the top of block-random

2004-08-30  Jens A. Tkotz <jens@peino.de>  1.4.5-cvs-b139

	* Fix: Remove PHP Warnings in view_album, Fixes SF Bug #1018848.

2004-08-29  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b138

	* Fix: Always use the correct functions and import your globals
	  before trying to use them.

2004-08-29  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b137

	* Fix: Remove half-written debug code

2004-08-29  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b136

	* Fix: Remove the block-random cache file whenever we delete photos

	* Change: Separate the mail headers so that it's easier to read.

2004-08-28  Chris Kelly <ckdake@users.sf.net> 1.4.5-cvs-b135

	* Fix: remove tr that was causing netscape problems
    
	* Change: vertically align albums at the top of the table cell on the front page
