@@ -1,4 +1,8 @@
-2004-08-31 JoEllen Drazan <skins@pownuke.com> 1.4.5-cvs-b144
+2004-08-31  Chris Kelly <ckdake@users.sf.net> 1.4.5-cvs-b145
+
+	* Fix: two more popup css changes that got left out before
+
+2004-08-31  JoEllen Drazan <skins@pownuke.com> 1.4.5-cvs-b144
 
 	* New: Added class vapoll to voting output (allows more control over the text)
 
